--- a/app/src/main/res/layout/car_check.xml
+++ b/app/src/main/res/layout/car_check.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-<LinearLayout
-    android:id="@+id/carLayout"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
+
 
 
     <LinearLayout
+        android:id="@+id/move"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@color/global_headcolor"
@@ -106,6 +103,10 @@
 
                 >
 
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
                 <ImageView
                     android:id="@+id/iv_control_normal_bg"
                     android:layout_width="fill_parent"
@@ -114,6 +115,7 @@
                     android:src="@mipmap/control_car_normal_bg" />
 
 
+                </RelativeLayout>
                 <RelativeLayout
                     android:id="@+id/scan_layout"
                     android:layout_width="fill_parent"
@@ -151,251 +153,49 @@
         </LinearLayout>
 
     </LinearLayout>
-    <FrameLayout
-        android:id="@+id/carcheck_bottom_content"
-        android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:background="@color/global_rgba"
 
-        >
+
+
+
         <LinearLayout
-            android:id="@+id/list_item_txt"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_below="@+id/move"
             android:orientation="vertical"
-            android:visibility="visible"
             >
-
+        <!--換成動態加載-->
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/car_list_information"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="@color/black_rock"
+            >
+        </android.support.v7.widget.RecyclerView>
             <RelativeLayout
-
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="horizontal"
+                android:layout_height="wrap_content"
+                android:background="@color/black_rock"
 
                 >
-
-                <TextView
-                    android:layout_centerVertical="true"
-                    android:gravity="center_vertical"
+                <Button
+                    android:id="@+id/set_mode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:text="车辆VIN码"
-                    android:textColor="#6B6B6B"
-                    android:textSize="18sp"
+                    android:text="设置运输模式"
+                    android:layout_alignParentLeft="true"
                     />
-
-                <TextView
-                    android:layout_centerVertical="true"
-                    android:id="@+id/vin_txt_number"
+                <Button
+                    android:id="@+id/cancle_mode"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="取消运输模式"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="23dp"
-                    android:text="78798798797"
-                    android:textColor="#BEBEBE"
-                    android:textSize="16sp"
                     />
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="0dp"
-                    android:background="#6B6B6B"></View>
-            </RelativeLayout>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="horizontal"
-                >
-
-                <TextView
-                    android:layout_centerVertical="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:text="车辆油量"
-                    android:textColor="#6B6B6B"
-                    android:textSize="18sp"
-                    />
-
-                <TextView
-                    android:layout_centerVertical="true"
-                    android:id="@+id/car_oil_txt_number"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="23dp"
-                    android:text="4"
-                    android:textColor="#BEBEBE"
-                    android:textSize="16sp"
-                    />
-
-                <View
-                    android:layout_alignParentBottom="true"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#6B6B6B"></View>
-            </RelativeLayout>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="horizontal"
-                android:layout_gravity="center_vertical"
-                >
-
-                <TextView
-                    android:layout_centerVertical="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:text="车辆里程数"
-                    android:textColor="#6B6B6B"
-                    android:textSize="18sp"
-                    />
-
-                <TextView
-                    android:layout_centerVertical="true"
-                    android:id="@+id/mileage_txt_number"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="23dp"
-                    android:text="43km"
-                    android:textColor="#BEBEBE"
-                    android:textSize="16sp"
-                    />
-
-                <View
-                    android:layout_alignParentBottom="true"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#6B6B6B"></View>
             </RelativeLayout>
 
-
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_centerVertical="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:text="车辆电压"
-                    android:textColor="#6B6B6B"
-                    android:textSize="18sp"
-                    />
-
-                <TextView
-                    android:id="@+id/voltage_txt_number"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="23dp"
-                    android:layout_centerVertical="true"
-
-                    android:text="24v"
-                    android:textColor="#BEBEBE"
-                    android:textSize="16sp"
-                    />
-
-                <View
-                    android:layout_alignParentBottom="true"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#6B6B6B"></View>
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:gravity="center_vertical"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_centerVertical="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:text="车辆模式"
-                    android:textColor="#6B6B6B"
-                    android:textSize="18sp"
-                    />
-
-                <TextView
-                    android:id="@+id/car_txt_modle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="23dp"
-                    android:layout_centerVertical="true"
-                     android:text="运输模式"
-                    android:textColor="#BEBEBE"
-                    android:textSize="16sp"
-                    />
-
-                <View
-                    android:layout_alignParentBottom="true"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="#6B6B6B"></View>
-            </RelativeLayout>
-
-            <RelativeLayout
-
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="23dp"
-
-                    />
-
-
-            </RelativeLayout>
-            <RelativeLayout
-
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:orientation="horizontal"
-                android:layout_marginBottom="8dp"
-                >
-
-
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="23dp"
-                    android:textColor="#BFEFFF"
-                    android:textSize="22sp"
-                    android:text="确认上传"
-                    android:layout_alignParentTop="true"
-                    />
-
-
-            </RelativeLayout>
         </LinearLayout>
-
         <LinearLayout
             android:layout_gravity="center_vertical"
             android:id="@+id/no_report_layout"
@@ -421,26 +221,8 @@
                 android:layout_marginTop="@dimen/carcheck_noreport_imag_margin_top"
                 android:background="@mipmap/timer" />
         </LinearLayout>
-    </FrameLayout>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</LinearLayout>
 <FrameLayout
     android:id="@+id/dialog"
     android:layout_width="match_parent"
@@ -474,4 +256,4 @@
 
 </FrameLayout>
 
-</FrameLayout>
+</RelativeLayout>
