--- a/app/src/main/res/layout/layout_carcheck_checking.xml
+++ b/app/src/main/res/layout/layout_carcheck_checking.xml
@@ -1,3 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView android:id="@+id/checking_listview" android:visibility="gone" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:listSelector="@color/transparents" android:divider="@color/white120" android:dividerHeight="0.30000007dip" android:footerDividersEnabled="true"
+<ListView
+    android:id="@+id/checking_listview"
+    android:visibility="gone"
+    android:fadingEdge="none"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:listSelector="@color/transparents"
+    android:divider="@color/white120"
+    android:dividerHeight="0.30000007dip"
+    android:footerDividersEnabled="true"
     xmlns:android="http://schemas.android.com/apk/res/android" />
