--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,4 +42,12 @@
     <color name="white180">#b4ffffff</color>
     <color name="white80">#50ffffff</color>
     <color name="yellow">#ffc7940d</color>
+    <color name="titlebg">#202020</color>
+    <color name="titletc">#ffffff</color>
+    <color name="bg">#F9F9F9 </color>
+    <color name="textcolor">#333333 </color>
+    <color name="log_name">#666666 </color>
+    <color name="log_date">#999999 </color>
+    <color name="umeng_divide">#eeeeee</color>
+    <color name="infodetail_bg">#DFDFDF</color>
 </resources>
