--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -47,4 +47,5 @@
     <dimen name="topbar_item_width">45.0dip</dimen>
     <dimen name="activity_horizontal_margin">16.0dip</dimen>
     <dimen name="activity_vertical_margin">16.0dip</dimen>
+    <dimen name="list_padding">1dp</dimen>
 </resources>
